--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,8 @@ Changelog
 2.12.3 (unreleased)
 -------------------
 
-- TBD
-
+- More 64-bit issues fixed: Use correct integer size for slice operations.
+  Most likely this is not the only 'i' -> 'n' fix required.
 
 2.12.2 (2009-08-02)
 -------------------
@@ -13,14 +13,12 @@ Changelog
 - Fixed 64-bit compatibility issues for Python 2.5.x / 2.6.x.  See 
   http://www.python.org/dev/peps/pep-0353/ for details.
 
-
 2.12.1 (2009-04-15)
 -------------------
 
 - Update for iteration proxying: The proxy for `__iter__` must not rely on the
   object to have an `__iter__` itself, but also support fall-back iteration via
   `__getitem__` (this fixes https://bugs.launchpad.net/zope2/+bug/360761).
-
 
 2.12 (2009-01-25)
 -----------------
