--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Changelog
 2.12.4 (unreleased)
 -------------------
 
+- Fix iteration proxying to pass `self` acquisition-wrapped into both
+  `__iter__` as well as `__getitem__` (this fixes
+  https://bugs.launchpad.net/zope2/+bug/360761).
+
 - Add tests for the __getslice__ proxying, including open-ended slicing.
 
 2.12.3 (2009-08-08)
