Expand the ``tp_name`` of our extension types to hold the fully qualified name. This ensures classes have their ``__module__`` set correctly.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 2.13.1 (unreleased)
 -------------------
 
+- Expand the ``tp_name`` of our extension types to hold the fully qualified
+  name. This ensures classes have their ``__module__`` set correctly.
 
 2.13.0 (2010-02-14)
 -------------------
