Fix the ``tp_name`` of the ImplicitAcquisitionWrapper and ExplicitAcquisitionWrapper to match their Python visible names and thus have a correct ``__name__``.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Changelog
 2.13.1 (unreleased)
 -------------------
 
+- Fix the ``tp_name`` of the ImplicitAcquisitionWrapper and
+  ExplicitAcquisitionWrapper to match their Python visible names and thus have
+  a correct ``__name__``.
+
 - Expand the ``tp_name`` of our extension types to hold the fully qualified
   name. This ensures classes have their ``__module__`` set correctly.
 
