--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,3 +3,10 @@ Changelog
 
 2.11.2 (unreleased)
 -------------------
+
+- Fix the ``tp_name`` of the ImplicitAcquisitionWrapper and
+  ExplicitAcquisitionWrapper to match their Python visible names and thus have
+  a correct ``__name__``.
+
+- Expand the ``tp_name`` of our extension types to hold the fully qualified
+  name. This ensures classes have their ``__module__`` set correctly.
