Don't raise AttributeError for '__iter__' if fallback to '__getitem__' succeeds.
LP #1155760.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 4.0.1 (unreleased)
 ------------------
 
+- Don't raise an attribute error for ``__iter__`` if the fallback to
+  ``__getitem__`` succeeds.  LP #1155760.
+
 
 4.0 (2013-02-24)
 ----------------
