Tolerate unicode attribute names.
Only in ASCII encoding.

Fixes LP #143358.

Cherry-pick 8e4557004dbbab1afc95796a2a8e31bdbb4ea890 from master.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 2.13.9 (unreleased)
 -------------------
 
+- Tolerate Unicode attribute names (ASCII only).  LP #143358.
+
 - Make module-level ``aq_acquire`` API respect the ``default`` parameter.
   LP #1387363.
 
