When temporarily decoding an incoming attribute name from a unicode string, be careful not to destroy the temoporary PyObject until we're done using its char* buffer. Fixes zopefoundation/Acquisition#5.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Changelog
 2.13.10 (unreleased)
 --------------------
 
-- TBD
+- Correct several dangling pointer uses in the C extension,
+  potentially fixing a few interpreter crashes. See
+  https://github.com/zopefoundation/Acquisition/issues/5.
 
 2.13.9 (2015-02-17)
 -------------------
