--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,10 @@
 Changelog
 =========
 
-2.13.11 (unreleased)
+2.13.11 (2016-09-05)
 --------------------
 
+- Fix broken 2.13.10 release by adding a missing MANIFEST.in.
 
 2.13.10 (2016-09-05)
 --------------------
