call PyObject_GC_UnTrack() in tp_dealloc()
    see the following sites for details:
    * https://bugs.python.org/issue31095
    * https://github.com/python/cpython/pull/2974

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 2.13.12 (unreleased)
 --------------------
 
+- Fix the extremely rare potential for a crash when the C extensions
+  are in use. See `issue 21 <https://github.com/zopefoundation/Acquisition/issues/21>`_.
+
 
 2.13.11 (2016-09-05)
 --------------------
