Drop support for Python 2.6
- it is no longer supported
- Travis cannot download Python 2.6 any more

modified:   .travis.yml
modified:   CHANGES.txt
modified:   appveyor.yml
modified:   tox.ini

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Changelog
 
 - add Appveyor configuration for Windows wheel builds
 
+- drop support for Python 2.6
+
 2.13.12 (2017-12-01)
 --------------------
 
